; ModuleID = '/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_thread_sem_get.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_thread_sem_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sys_thread_sem_key = common dso_local global i32 0, align 4
@ESP_THREAD_SAFE_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"sem_get s=%p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @sys_thread_sem_get() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @sys_thread_sem_key, align 4
  %3 = call i32* @pthread_getspecific(i32 %2)
  store i32* %3, i32** %1, align 8
  %4 = load i32*, i32** %1, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %8, label %6

6:                                                ; preds = %0
  %7 = call i32* (...) @sys_thread_sem_init()
  store i32* %7, i32** %1, align 8
  br label %8

8:                                                ; preds = %6, %0
  %9 = load i32, i32* @ESP_THREAD_SAFE_DEBUG, align 4
  %10 = load i32*, i32** %1, align 8
  %11 = bitcast i32* %10 to i8*
  %12 = call i32 @LWIP_DEBUGF(i32 %9, i8* %11)
  %13 = load i32*, i32** %1, align 8
  ret i32* %13
}

declare dso_local i32* @pthread_getspecific(i32) #1

declare dso_local i32* @sys_thread_sem_init(...) #1

declare dso_local i32 @LWIP_DEBUGF(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
